# terminal-game

./: CMakeLists.txt  README.md  architecture.txt  class_diagram.drawio  class_diagram.drawio:Zone.Identifier  field.cpp  field.h  font.cpp  ghost.cpp  ghost.h  gui.cpp  gui.h  imaging.cpp  imaging.h  main.cpp  player.cpp  player.h  state_diagram.drawio  state_diagram.drawio:Zone.Identifier  tp-2024-project-gaptullina-checkpoint_2.zip:Zone.Identifier
tp-2024-project-gaptullina-checkpoint_2/tp-2024-project-gaptullina-checkpoint_2/: field.cpp  field.h  gui.cpp  main.cpp  player.cpp  player.h
